# kvcheck

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/plans/: init.md
.github/workflows/: ci.yml
examples/: fp8_kv.yaml  fp8_kv_calibrated.yaml  fp8_kv_offline_calibrated.yaml  gsm8k.yaml  lm_eval_gsm8k.yaml  prefix_cache.yaml  server_smoke.yaml
kvcheck/: cli.py  compare.py  config.py  report.py  runner.py  types.py
kvcheck/engines/: base.py  fake.py  openai_server.py  vllm_inprocess.py
kvcheck/metrics/: exact_match.py  token_diff.py
kvcheck/suites/: base.py  gsm8k.py  lm_eval.py  synthetic.py
scripts/: calibrate_fp8_kv.py  sweep_kv_skip_layers.py
tests/: test_cli.py  test_compare.py  test_config.py  test_exact_match.py  test_fake_engine.py  test_gsm8k_suite.py  test_lm_eval_suite.py  test_openai_server.py  test_openai_server_live.py  test_per_side_model.py  test_report.py  test_runner.py  test_runner_accuracy.py  test_smoke.py  test_synthetic_suite.py  test_token_diff.py
