[project]
name = "kvcheck"
version = "0.1.0"
description = "Detect output-quality divergence caused by KV-cache reuse and approximation in LLM inference engines"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.8"]
server = ["openai>=1.0"]
gsm8k = ["datasets>=2.0"]
lm_eval = ["lm-eval>=0.4"]

[project.scripts]
kvcheck = "kvcheck.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kvcheck"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
